--- a/Lecture 01/Lecture 1c - Mathematical Operations.ipynb
+++ b/Lecture 01/Lecture 1c - Mathematical Operations.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "# log(x) computes the logarithm with base \"e\" (Euler constant)\n",
     "# exp(x) compute the Euler constant raised to the power of \"x\"\n",
-    "# sing(x) computes the sine of x\n",
+    "# sin(x) computes the sine of x\n",
     "# cos(x) computes the cosine of x\n",
     "# In this example, we're substituting x = 1\n",
     "\n",
@@ -189,27 +189,7 @@
    "outputs": [],
    "source": [
     "q = 1/np.sqrt(2*np.pi)\n",
-    "ex = np.exp(-x^2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0003637882707952594"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q*ex"
+    "ex = np.exp(-x**2)"
    ]
   },
   {
