--- a/Lecture 01/Lecture 1 - Exercises.ipynb
+++ b/Lecture 01/Lecture 1 - Exercises.ipynb
@@ -34,12 +34,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "yellow\n",
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your answers here as comments:\n",
     "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#1. The main difference between a list and an array is that a list is a collection of items that can contain elements of multiple \n",
+    "# data types, while an array contains only elements that belong to the same data type. Another difference is that\n",
+    "# arrays can handle arithmetic operations directly while lists cannot, but lists can be directly dealed with data cleaning commands. \n",
+    "\n",
+    "#2 The output of the first unit of a list in Python has to be obtained from \"list[0]\"\n",
+    "list_colors = [\"red\", \"yellow\", \"green\"]\n",
+    "\n",
+    "print(list_colors[0])\n",
+    "print(list_colors[1])\n",
+    "\n",
+    "#3. The easiest way to concatenate two strings is to use \"+\"\"Lecture 1 - Exercises.ipynb\"\n",
+    "\n",
+    "number1 = str(1)\n",
+    "\n",
+    "\"One\" + \" \" + \"is\" + \" \" + number1\n",
+    "\n",
+    "#4. \"not defined\" error can happen when there is an NameError, meaning that variables are not defined\n",
+    "# or not defined correctly. For example, the error appears if defining nominal variables did not include quotation marks. \n",
+    "\n",
+    "#5. \"could not be broadcast\"error happens when mathematical operations \n",
+    "# are conducted on strings that do not have the same size.  \n",
+    "\n",
+    "\n",
+    "#6. use \"numPy\" library to do mathematical operations \n",
+    "\n",
+    "\n",
+    "vec_a  = np.array([1,2,3,4,5])\n",
+    "print(np.median(vec_a))\n",
     "\n"
    ]
   },
@@ -64,13 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your own code\n",
     "\n",
-    "\n"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -92,12 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your own code\n",
     "\n",
+    "wdi = pd.read_csv(\"data/worldbank_wdi_2019.csv\")\n",
     "\n"
    ]
   },
@@ -115,9 +164,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>life_expectancy</th>\n",
+       "      <th>gdp_per_capita_usd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>63.565</td>\n",
+       "      <td>500.522664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>79.282</td>\n",
+       "      <td>5396.215864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>76.474</td>\n",
+       "      <td>4022.150184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13672.576660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41327.502030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>Data from database: World Development Indicators</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>Last Updated: 12/22/2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 year    country_name  \\\n",
+       "0                                                2019     Afghanistan   \n",
+       "1                                                2019         Albania   \n",
+       "2                                                2019         Algeria   \n",
+       "3                                                2019  American Samoa   \n",
+       "4                                                2019         Andorra   \n",
+       "..                                                ...             ...   \n",
+       "266                                               NaN             NaN   \n",
+       "267                                               NaN             NaN   \n",
+       "268                                               NaN             NaN   \n",
+       "269  Data from database: World Development Indicators             NaN   \n",
+       "270                          Last Updated: 12/22/2022             NaN   \n",
+       "\n",
+       "     life_expectancy  gdp_per_capita_usd  \n",
+       "0             63.565          500.522664  \n",
+       "1             79.282         5396.215864  \n",
+       "2             76.474         4022.150184  \n",
+       "3                NaN        13672.576660  \n",
+       "4                NaN        41327.502030  \n",
+       "..               ...                 ...  \n",
+       "266              NaN                 NaN  \n",
+       "267              NaN                 NaN  \n",
+       "268              NaN                 NaN  \n",
+       "269              NaN                 NaN  \n",
+       "270              NaN                 NaN  \n",
+       "\n",
+       "[271 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
@@ -126,7 +320,23 @@
     "# If you're viewing the dataset from the VS-Code \"Variables\" tool, you'll\n",
     "# see an extra column \"index\". Do not include this in your list.\n",
     "\n",
+    "wdi\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Year = []\n",
+    "\n",
+    "\n",
+    "variables = [\"Year\", \"Country\", \"Life_Expectancy\", \"GDP_per_capita\"]"
    ]
   },
   {
@@ -152,9 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count       255.000000\n",
+       "mean      17230.949757\n",
+       "std       25792.183785\n",
+       "min         216.972968\n",
+       "25%        2186.046581\n",
+       "50%        6837.717826\n",
+       "75%       19809.323135\n",
+       "max      199377.481800\n",
+       "Name: gdp_per_capita_usd, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
@@ -164,7 +393,7 @@
     "# list_colors[2] will output \"yellow\"\n",
     "\n",
     "\n",
-    "\n"
+    "wdi[\"gdp_per_capita_usd\"].describe()\n"
    ]
   },
   {
@@ -264,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
