--- a/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
+++ b/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
@@ -147,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,13 @@
     "\n",
     "keyword in sentence\n",
     "\n",
-    "# Try changing the keyword!\n"
+    "# Try changing the keyword!\n",
+    "\n",
+    "\n",
+    "keyword2 = \"The\"\n",
+    "sentence2 = \"The Federal Reserve makes forecasts about many economic outcomes\"\n",
+    "\n",
+    "keyword2 in sentence2"
    ]
   },
   {
@@ -298,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,10 +312,10 @@
      "output_type": "stream",
      "text": [
       "False\n",
+      "False\n",
+      "False\n",
       "True\n",
-      "True\n",
-      "True\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -317,7 +323,7 @@
     "# We can check equality and inequality constraints\n",
     "# Try changing $x$ and see what happens!\n",
     "\n",
-    "x = 5\n",
+    "x = 6\n",
     "\n",
     "print( x < 5 )\n",
     "print( x <= 5 )\n",
@@ -895,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
