new changes to lecture 2

--- a/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
+++ b/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
@@ -418,23 +418,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# Write down your own solution\n",
     "\n",
+    "print(np.exp(1)**5 <50)\n",
     "\n",
-    "\n",
-    "\n"
+    "y = -1 \n",
+    "print(y**2 + y*2 +1 == 0 )\n"
    ]
   },
   {
@@ -572,12 +574,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "age = 10 \n",
+    "\n",
+    "(age < 20 )|(age > 30)\n",
     "\n",
     "\n",
     "\n",
@@ -771,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -832,15 +848,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your solution to this problem\n",
     "\n",
+    "import random\n",
     "\n",
+    "points = 17 \n",
     "\n",
+    " # random.randint(0,100)\n",
     "\n",
+    "print(points)\n",
     "\n",
     "\n",
     "\n",
@@ -867,9 +895,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is greater or equal to 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your solution to this problem\n",
     "\n",
@@ -877,9 +913,16 @@
     "\n",
     "\n",
     "\n",
+    "c = np.array([1,2,3])\n",
+    "\n",
+    "ans = sum(c)\n",
     "\n",
     "\n",
     "\n",
+    "if ans >= 5:\n",
+    "    print(\"The sum is greater or equal to 5\")\n",
+    "else:\n",
+    "    print(\"The sum is strictly less than 5\")\n",
     "\n",
     "\n"
    ]
