Upload ERD Lecture 4

--- a/Lecture 02/Lecture 2 - Exercises.ipynb
+++ b/Lecture 02/Lecture 2 - Exercises.ipynb
@@ -177,39 +177,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(d) Classifying a variable\n",
-    "\n",
-    "<font size = \"3\">\n",
-    "\n",
-    "- Define a new variable \"year\" an assign the value \"2008\"\n",
-    "- Write an if/else statement that does the following\n",
-    "    - print(\"Year 2000 or earlier\") if the year is less than or equal to  2000.\n",
-    "    - print(\"Between 2001 and 2005\") if the year is between 2001 and 2005.\n",
-    "    - print(\"Year 2006 or later\") if the year is after 2005.\n",
-    "\n",
-    "To get full points you must do all of the above instructions\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your own code\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<font size = \"5\">\n",
-    "\n",
-    "For questions (e) through (g) mport the dataset <br>\n",
+    "For questions (d) through (f) mport the dataset <br>\n",
     " \"data_raw/fifa23_players_basic.csv\"\n",
     "\n",
     "<font size = \"3\">\n",
@@ -238,7 +206,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(e) Create a new dataset subsetting the <br>\n",
+    "(d) Create a new dataset subsetting the <br>\n",
     "players whose age is less than 20"
    ]
   },
@@ -261,7 +229,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(f) Use queries + global variables\n",
+    "(e) Use queries + global variables\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -296,7 +264,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(g) Use sorting + \".iloc[]\"\n",
+    "(f) Use sorting + \".iloc[]\"\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -324,7 +292,7 @@
    "metadata": {},
    "source": [
     "<font size = \"5\">\n",
-    "For questions (h)-(j), read \"data_raw/wdi_2020.csv\" <br>\n",
+    "For questions (h)-(i), read \"data_raw/wdi_2020.csv\" <br>\n",
     "This is a dataset of countries from <br>\n",
     "the World Development Indicators"
    ]
@@ -335,7 +303,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(h) Extract sorted elements from a dataset\n",
+    "(g) Extract sorted elements from a dataset\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -363,7 +331,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(i) Subset elements with query\n",
+    "(h) Subset elements with query\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -392,7 +360,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(j) Plot by category\n",
+    "(i) Plot by category\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -447,8 +415,8 @@
     "- Define $r = 0.04$\n",
     "- Define two arrays $A$ and $T$ using \"np.array()\", assigning the following values\n",
     "\n",
-    "$ a = \\begin{pmatrix} a_1 \\\\ a_2 \\\\ a_3 \\end{pmatrix} =  \\begin{pmatrix} 20 \\\\ 30 \\\\ 15 \\end{pmatrix},\n",
-    "\\qquad  t = \\begin{pmatrix} t_1 \\\\ t_2 \\\\ t_3 \\end{pmatrix} = \\begin{pmatrix} 0 \\\\ 1 \\\\ 2 \\end{pmatrix} $\n",
+    "$ a = \\begin{pmatrix} a_0 \\\\ a_1 \\\\ a_2 \\end{pmatrix} =  \\begin{pmatrix} 20 \\\\ 30 \\\\ 15 \\end{pmatrix},\n",
+    "\\qquad  t = \\begin{pmatrix} t_0 \\\\ t_1 \\\\ t_2 \\end{pmatrix} = \\begin{pmatrix} 0 \\\\ 1 \\\\ 2 \\end{pmatrix} $\n",
     "\n",
     "- Use element-by-element vector operations to compute a new array $M$ of length 3:\n",
     "\n",
