--- a/Lecture 01/Lecture 1 - Exercises.ipynb
+++ b/Lecture 01/Lecture 1 - Exercises.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "<font size = \"5\">\n",
     "\n",
-    "(a) Import the pandas and matplotlib packages"
+    "(a) Import the pandas, matplotlib, and numpy packages"
    ]
   },
   {
