--- a/Lecture 06/Lecture 6a - Setup for Web Scraping.ipynb
+++ b/Lecture 06/Lecture 6a - Setup for Web Scraping.ipynb
@@ -69,7 +69,9 @@
     "``` conda install conda-forge::selenium  ``` <br>\n",
     "``` conda install conda-forge::webdriver-manager  ```\n",
     "\n",
-    "If the terminal asks you if you want to install the packages, confirm yes.\n"
+    "If the terminal asks you if you want to install the packages, confirm yes.\n",
+    "\n",
+    "This is a general approach to install new packages\n"
    ]
   }
  ],
