--- a/Lecture 06/Lecture 6d - Website Interaction.ipynb
+++ b/Lecture 06/Lecture 6d - Website Interaction.ipynb
@@ -107,8 +107,7 @@
     "\n",
     "Convert to form\n",
     "\n",
-    "<img src=\"figures/screenshot_form.png\" alt=\"drawing\" width=\"200\"/>\n",
-    "\n",
+    "<img src=\"figures/screenshot_semester_form.png\" alt=\"drawing\" width=\"200\"/>\n",
     "\n",
     "<font size = \"3\">\n",
     "\n",
@@ -306,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:darkblue\"> II. Path Dependent Interactions </span>"
+    "# <span style=\"color:darkblue\"> III. Interact and Extract Data </span>"
    ]
   },
   {
@@ -603,6 +602,23 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:darkblue\"> IV. Additional Links </span>\n",
+    "\n",
+    "<font size = \"5\">\n",
+    "\n",
+    "More information on Selenium:\n",
+    "\n",
+    "https://www.selenium.dev/documentation/overview/\n",
+    "\n",
+    "Details on clicking through forms:\n",
+    "\n",
+    "https://www.selenium.dev/documentation/webdriver/support_features/select_lists/\n"
    ]
   }
  ],
