--- a/Lecture 05/Lecture 5c - Introduction to HTML.ipynb
+++ b/Lecture 05/Lecture 5c - Introduction to HTML.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1b/jzb9ndz97b5260fzr9d8kzyh5f7xd6/T/ipykernel_7444/957484008.py:4: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\Zeyuan Wang\\AppData\\Local\\Temp\\ipykernel_26216\\957484008.py:4: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML # Allows you to run HTML code from Python\n"
      ]
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -308,14 +308,25 @@
        "            padding: 20px;\n",
        "            }\n",
        "        </style>\n",
+       "\n",
+       "        <style>\n",
+       "            .alejandro {\n",
+       "            background-color: blue;\n",
+       "            color: white;\n",
+       "            border: 2px solid black;\n",
+       "            margin: 20px;\n",
+       "            padding: 20px;\n",
+       "            }\n",
+       "        </style>\n",
        "    </head>\n",
        "    <body>\n",
+       "\n",
        "\n",
        "        <div class=\"semester\">\n",
        "            Fall\n",
        "        </div>\n",
        "\n",
-       "        <div class=\"semester\">\n",
+       "        <div class=\"alejandro\">\n",
        "            Spring\n",
        "        </div>\n",
        "\n",
@@ -331,7 +342,7 @@
     }
    ],
    "source": [
-    "%%html\n",
+    "%%html  #this is the magic code that asks Python to operate other format of coding \n",
     "\n",
     "<html>\n",
     "    <head>\n",
@@ -344,14 +355,25 @@
     "            padding: 20px;\n",
     "            }\n",
     "        </style>\n",
+    "\n",
+    "        <style>\n",
+    "            .alejandro {\n",
+    "            background-color: blue;\n",
+    "            color: white;\n",
+    "            border: 2px solid black;\n",
+    "            margin: 20px;\n",
+    "            padding: 20px;\n",
+    "            }\n",
+    "        </style>\n",
     "    </head>\n",
     "    <body>\n",
+    "\n",
     "\n",
     "        <div class=\"semester\">\n",
     "            Fall\n",
     "        </div>\n",
     "\n",
-    "        <div class=\"semester\">\n",
+    "        <div class=\"alejandro\">\n",
     "            Spring\n",
     "        </div>\n",
     "\n",
@@ -378,6 +400,8 @@
    "outputs": [],
    "source": [
     "# Write your own code\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -652,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
