lecture 6 web scraping add notes

--- a/Lecture 06/Lecture 6a - Setup for Web Scraping.ipynb
+++ b/Lecture 06/Lecture 6a - Setup for Web Scraping.ipynb
@@ -71,7 +71,9 @@
     "\n",
     "If the terminal asks you if you want to install the packages, confirm yes.\n",
     "\n",
-    "This is a general approach to install new packages\n"
+    "This is a general approach to install new packages\n",
+    "\n",
+    "\n"
    ]
   }
  ],
