--- a/Lecture 06/Lecture 6b - Class Acitivity - Identifying HTML elements.ipynb
+++ b/Lecture 06/Lecture 6b - Class Acitivity - Identifying HTML elements.ipynb
@@ -146,6 +146,15 @@
     "# Write down your answers as a comment\n",
     "\n",
     "\n",
+    "# \"select\"\n",
+    "\n",
+    "# class = \"form-control\"\n",
+    "\n",
+    "\n",
+    "# //*[@id=\"crit-srcdb\"] \n",
+    "\n",
+    "# /html/body/main/div[1]/div/div[2]/form/div[2]/div/div[2]/select   full xpath\n",
+    "\n",
     "\n"
    ]
   },
