--- a/Lecture 06/Lecture 6d - Website Interaction.ipynb
+++ b/Lecture 06/Lecture 6d - Website Interaction.ipynb
@@ -19,12 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This command executes the python scripts\n",
-    "exec(open(\"./scripts/import_packages.py\").read())\n"
+    "exec(open(\"./scripts/import_packages.py\").read())\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +122,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"Select\" is a function from the selenium package\n",
+    "# \".options\" extracts the options for Selenium\n",
+    "\n",
+    "\n",
+    "select_semester = Select(form_semester)\n",
+    "store_options   = select_semester.options\n",
+    "num_options     = len(store_options)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Fall 2024',\n",
+       " 'Spring 2025',\n",
        " 'Summer 2024',\n",
        " 'Spring 2024',\n",
        " 'Fall 2023',\n",
@@ -146,18 +165,12 @@
        " 'Spring 2019']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# \"Select\" is a function from the selenium package\n",
-    "# \".options\" extracts the options for Selenium\n",
-    "select_semester = Select(form_semester)\n",
-    "store_options   = select_semester.options\n",
-    "num_options     = len(store_options)\n",
-    "\n",
     "# Store options into a list\n",
     "list_options = []\n",
     "for i in range(num_options):\n",
@@ -189,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +556,7 @@
        "[83 rows x 2 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
