--- a/Lecture 08/Lecture 8a - Review of Functions.ipynb
+++ b/Lecture 08/Lecture 8a - Review of Functions.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,27 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "110.51432983541218"
+       "122.12807053488328"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function_v(P=100, r = 0.01, n = 20, t=10)"
+    "function_v(P=100, r = 0.02, n = 20, t=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +216,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fail', 'pass', 'pass', 'fail']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your own code\n",
+    "def loopy(items):\n",
+    "    results = []\n",
+    "    for item in items:\n",
+    "        if item >= 55:\n",
+    "            results.append(\"pass\")\n",
+    "        else:\n",
+    "            results.append(\"fail\")\n",
+    "            \n",
+    "    return results\n",
     "\n",
-    "\n"
+    "items = [10, 80, 62, 54]\n",
+    "\n",
+    "print(loopy(items))\n"
    ]
   },
   {
@@ -264,6 +297,8 @@
     "# Write your own code\n",
     "\n",
     "\n",
+    "\n",
+    "message_list = [\" Module \" + module_list[i] + \" will cover \" + topic_list[i] for i in range(num_topics)]\n",
     "\n"
    ]
   },
@@ -295,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +339,7 @@
        "6"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,6 +394,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for loop wit lambda function\n",
+    "\n",
+    "lst1 = [1, 2, 3, 4, 5]\n",
+    "lst2 = []\n",
+    "  \n",
+    "# Lambda function to square number\n",
+    "temp = lambda i:i**2\n",
+    " \n",
+    "for i in lst1:\n",
+    " \n",
+    "    # Add to lst2\n",
+    "    lst2.append(temp(i))\n",
+    "   \n",
+    "print(lst2)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -376,26 +433,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
     "# Write your own code\n",
     "\n",
     "\n",
+    "fn_iseligible = lambda x: x >= 18\n",
     "\n",
-    "\n"
+    "V1 = fn_iseligible(x=30)\n",
+    "print(V1)\n"
    ]
   }
  ],
@@ -415,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
